<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBABCDEF"
    tools:context=".addtrip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/hamburger"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#ffffff"
            android:src="@mipmap/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/TagMe"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#ffffff"
            android:contentDescription="TODO"
            android:cropToPadding="true"
            app:srcCompat="@mipmap/tagme" />

        <TextView
            android:id="@+id/hello"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/Hello"
            android:textSize="25sp"
            tools:text="@string/Hello" />

        <ImageButton
            android:id="@+id/addbutton"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            app:srcCompat="@android:drawable/ic_menu_add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:foregroundGravity="fill_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addnewtrip"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="top|start|end"
            android:text="+   NEW TRIP"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fromcountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TRAVEL FROM"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/fromcountry1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/country"
            android:inputType="text" />

        <TextView
            android:id="@+id/fromdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="ON"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/fromdate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/date"
            android:inputType="date" />

        <TextView
            android:id="@+id/tocountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TO"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/tocountry1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/country"
            android:inputType="text" />

        <TextView
            android:id="@+id/todate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="ON"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/todate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/date"
            android:inputType="date" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:text="@string/add"
            tools:text="add" />
    </LinearLayout>


</RelativeLayout>